--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,13 @@
+* {
+  font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  box-sizing: border-box;
+  color: #D4A931;
+}
+
+body {
+  background-color: #70929C;
+}
+
 .App {
   text-align: center;
 }
@@ -6,12 +16,14 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  margin: 0 7%;
+  padding: 0 7%;
+  background-color: #48788C;
 }
 
 .logo {
   display: flex;
   align-items: flex-end;
+  font-size: 4rem;
 }
 
 .logo-icon {
