--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -16,8 +16,10 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  padding: 0 7%;
+  padding: 0 7% 20px 0;
+  height: 110px;
   background-color: #48788C;
+  box-shadow: 1px 1px 10px 4px #0000004f;
 }
 
 .logo {
@@ -28,5 +30,5 @@
 }
 
 .logo-icon {
-  height: 150px;
+  height: 100px;
 }
