--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -3,10 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.movie-poster {
-  width: 100%;
+  box-shadow: -5px -3px 3px 2px #00000040;
 }
 
 .poster {
@@ -19,8 +16,20 @@
   justify-content: space-around;
   width: 100%;
   background-color: #D4A931;
+  height: 40px;
 }
 
 .fav-text {
   color: #48788C;
+}
+
+.fav-btn {
+  height: 30px;
+  width: 30px;
+  background-image: url('../../assets/images/hatOutline.svg');
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
 }
