--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -19,11 +19,13 @@
 .num-favs {
   position: relative;
   top: 5px;
-  left: 20px;
+  left: 25px;
 }
 
 .login-btn {
+  width: 100px;
   display: flex;
+  justify-content: space-around;
   align-items: center;
 }
 
