--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -4,11 +4,15 @@
   align-items: center;
   justify-content: center;
   box-shadow: 0px 7px 12px 0px #00000040;
+  margin: 15px;
+  padding: 0;
 }
 
 .poster {
-  width: 100%;
+  width: 250px;
 }
+
+/*favorite container should be display: none / hidden until user hovers over it. Once movie is clicked/ isFavorite, display should be show*/
 
 .fav-container {
   display: flex;
