--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -7,6 +7,7 @@
 }
 
 .fav-btn-group {
+  /*text should be display: none until :hover, then CSS transition ease in above the respective icon;*/
 }
 
 .fav-btn-nav {
