--- a/src/containers/MovieContainer/MovieContainer.css
+++ b/src/containers/MovieContainer/MovieContainer.css
@@ -1,6 +1,14 @@
 .movie-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 100px;
-  margin: 40px 7%;
+  height: 100%;
+  width: 80%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: wrap;
+  margin: 40px auto;
 }
+
+/*.movie-container::after {
+  content: "";
+  flex: auto;
+}*/
