--- a/src/containers/LoginForm/LoginForm.css
+++ b/src/containers/LoginForm/LoginForm.css
@@ -9,7 +9,7 @@
 }
 
 
-form {
+.lf-form {
   height: 300px;
   width: 80%;
   display: flex;
@@ -20,11 +20,11 @@ form {
   letter-spacing: 0.5px;
 }
 
-h2 {
+.banner-text {
   font-size: 2rem;
 }
 
-h3 {
+.lower-banner-text {
   font-size: 1.25rem;
 }
 
@@ -37,7 +37,8 @@ h3 {
 }
 
 input,
-button {
+.submit-login,
+.sign-up-btn {
   font-family: Futura, sans-serif;
   font-size: 1rem;
   height: 1.5rem;
@@ -48,7 +49,8 @@ input {
   padding-left: 5px;
 }
 
-button {
+.submit-login, 
+.sign-up-btn {
   border-width: 2px;
   height: 1.75rem;
   width: 208px;
@@ -56,22 +58,26 @@ button {
   letter-spacing: 1px;
 }
 
-button:hover {
+.submit-login:hover, 
+.sign-up-btn:hover {
   border: 2px #48788C;
   background-color: #D4AA32;
   color: #48788C;
 }
 
-button:active {
+.submit-login:active, 
+.sign-up-btn:active {
   border: 2px #C8901D;
   background-color: #C8901D;
 }
 
-button:focus {
+.submit-login:focus, 
+.sign-up-btn:focus {
   outline: none;
 }
 
-button:disabled {
+.submit-login:disabled, 
+.sign-up-btn:disabled {
   border: 2px #48788C;
   background-color: #70929C;
   color: #48788C;
