Remove extraneous code according to linting errors

--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -36,3 +36,7 @@
   justify-content: center;
   color: #ffffff;
 }
+
+.active .m-fav-btn {
+  background-image: url('../../assets/images/hatFull-red.svg');
+}
