--- a/src/components/Movie/Movie.css
+++ b/src/components/Movie/Movie.css
@@ -22,6 +22,7 @@
   background-color: #D4A931;
   height: 40px;
   cursor: pointer;
+  border: none;
 }
 
 .m-fav-text {
@@ -39,6 +40,10 @@
   color: #ffffff;
 }
 
-.active .m-fav-btn {
+.m-fav-btn:focus {
+  outline: none;
+}
+
+.m-fav-btn.red{
   background-image: url('../../assets/images/hatFull-red.svg');
 }
